syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerGameProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "common.proto"

message UserArrivedRegionRequest {
	string gateHost;
	int32 gatePort;
	int32 uid;
}


/* Controls */
message CharacterMoveReq {
	int32 uid = 1;
	Position toPos = 2;
}


/* Services Definition */

service UserService {
	rpc userArrived (UserArrivedRegionRequest) returns (CommonControlsResponse) {}
}

service CharacterService {
	rpc moveTo (CharacterMoveReq) returns (CommonControlsResponse) {}
}